--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@material-tailwind/react": "^2.1.10",
     "@phosphor-icons/react": "^2.1.7",
     "@reduxjs/toolkit": "^2.8.1",
+    "lucide-react": "^0.510.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-redux": "^9.2.0",
